# tea_engine

./: pyproject.toml  setup.py
src/demo/: demo.py
src/tea_engine/: __init__.py  ai.py  clock.py  engine.py  entity.py  graphic_things.py  renderer.py  types.py
src/tea_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tea_engine/cy/: renderer_concat.c  renderer_concat.pyi  renderer_concat.pyx  spacegrid.c  spacegrid.pyi  spacegrid.pyx  vector.c  vector.pxd  vector.pyi  vector.pyx
